<resources>
    <string name="app_name">Yoink</string>
    <string name="deal_name">Deals</string>
    <string name="course_name">Yoink</string>
    <string name="hello_world">Deals will go here..</string>
    <string name="action_settings">Settings</string>
    <string name="image_resource">Resource</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="yoink">Yoink</string>
    <string name="favourite_title">favourite title</string>
    <string name="settings_name">Settings</string>
    <string name="saved_list_name">Saved List</string>
    <string name="action_saved_list">Saved List</string>
    <string name="normal">normal</string>
    <string name="sattelite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="hybrid">Hybrid</string>
    <string name="none">None</string>
    <string name="current_location">Current Location</string>
    <string name="map_info">Information</string>
    <string name="location_label">Location</string>

    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="invalid_email">This email address is invalid</string>
    <string name="invalid_password">Password is too short</string>
    <string name="incorrect_password">Password is incorrect</string>
    <string name="field_required">This field is required</string>
    <string name="Descrpt_title_label">Deal</string>
    <string name="descrpt_hint">Deal</string>
    <string name="category_label">Category</string>
    <string name="category_hint">Category</string>
    <string name="biz_hint">business Name</string>
    <string name="logout">Logout</string>
    <string name="biz_add">Business Address</string>
</resources>
