<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DealFragment" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Descrpt_title_label"
        android:textSize="15dp"
        android:textIsSelectable="true" />

    <TextView
        android:id="@+id/deal_desc_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descrpt_hint"
        android:paddingBottom="@dimen/activity_field_margin2"
        android:inputType="none"
        android:singleLine="true"
        android:textSize="15dp"
        android:textIsSelectable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_field_margin2"
        android:text="@string/category_label"
        android:textSize="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/deal_cat_editText"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/category_hint"
            android:paddingBottom="@dimen/activity_field_margin2"
            android:inputType="none"
            android:singleLine="true"
            android:textSize="15dp" />


    </LinearLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_field_margin2"
        android:text="@string/biz_hint"
        android:textSize="15dp" />


    <TextView
        android:id="@+id/deal_biz_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/biz_hint"
        android:paddingBottom="@dimen/activity_field_margin2"
        android:inputType="none"
        android:singleLine="true"
        android:textSize="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_field_margin2"
        android:text="@string/biz_add"
        android:textSize="15dp" />


    <TextView
        android:id="@+id/biz_add_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/biz_add"
        android:paddingBottom="@dimen/activity_field_margin2"
        android:inputType="none"
        android:singleLine="true"
        android:textSize="15dp"
        android:textIsSelectable="true" />




</LinearLayout>

